--- a/index.html
+++ b/index.html
@@ -85,13 +85,13 @@
           <div class="d-flex flex-column mx-5">
             <div class="jumbotron">
               <h1 class="display-4 text-white">Frontend Technologies</h1>
-              <p class="lead my-sm-3">
-                <span class="text-white px-3 py-1 h4 bg-html">HTML</span>
-                <span class="text-white px-3 py-1 h4 bg-css">CSS</span>
-                <span class="text-white px-3 py-1 h4 bg-bootstrap fw-bolder">Bootstrap</span>
-                <span class="text-dark  px-3 py-1 h4 bg-js fw-bold">JS</span>
-                <span class="text-white px-3 py-1 h4 bg-react fw-bolder">React</span>
-              </p>
+              <div class="d-flex justify-content-start flex-wrap">
+                <div class="text-white lead px-3 py-1 m-1 my-xs-3 h4 bg-html">HTML</div>
+                <div class="text-white lead px-3 py-1 m-1 my-xs-3 h4 bg-css">CSS</div>
+                <div class="text-white lead px-3 py-1 m-1 my-xs-3 h4 bg-bootstrap fw-bolder">Bootstrap</div>
+                <div class="text-dark  lead px-3 py-1 m-1 my-xs-3 h4 bg-js fw-bold">JS</div>
+                <div class="text-white lead px-3 py-1 m-1 my-xs-3 h4 bg-react fw-bolder">React</div>
+              </div>
               <hr class="my-4" />
               <div class="d-flex flex-column bg-vlow">
                 <p class="h4 fw-light text-white pt-3 px-2 lh-base">
@@ -100,7 +100,7 @@
                     <li class="px-3 py-1 h5 fw-lighter">Blueprinting modern UI sections</li>
                     <li class="px-3 py-1 h5 fw-lighter">Designing attractive colour schemes</li>
                     <li class="px-3 py-1 h5 fw-lighter">Building UI elements</li>
-                    <li class="px-3 py-1 h5 fw-lighter">Adding functionality to components</li>
+                    <li class="px-3 py-1 h5 fw-lighter">Adding functionality to dynamic components</li>
                     <li class="px-3 py-1 h5 fw-lighter">Designing marketing websites</li>
                   </ul>
                 </p>
@@ -120,14 +120,14 @@
           <div class="d-flex flex-column mx-5">
             <div class="jumbotron">
               <h1 class="display-4">Backend Technologies</h1>
-              <p class="lead py-sm-3 my-lg-0 my-md-2">
-                <span class="text-white px-2 py-1 h4 bg-nodejs">Node JS</span>
-                <span class="text-dark  px-2 py-1 h4 bg-express fw-bolder shadow">Express</span>
-                <span class="text-white px-2 py-1 h4 bg-mongodb fw-bolder">MongoDB</span>
-                <span class="text-white px-2 py-1 h4 bg-mongoose fw-bold">Mongoose</span>
-                <span class="text-white px-2 py-1 h4 bg-jwt fw-bolder">JWT</span>
-                <span class="text-white px-2 py-1 h4 bg-json fw-bolder">JSON</span>
-              </p>
+              <div class="d-flex justify-content-start flex-wrap">
+                <span class="text-white lead px-2 py-1 my-xs-3 my-sm-1 m-1 h4 bg-nodejs">Node JS</span>
+                <span class="text-dark  lead px-2 py-1 my-xs-3 my-sm-1 m-1 h4 bg-express shadow">Express</span>
+                <span class="text-white lead px-2 py-1 my-xs-3 my-sm-1 m-1 h4 bg-mongodb">MongoDB</span>
+                <span class="text-white lead px-2 py-1 my-xs-3 my-sm-1 m-1 h4 bg-mongoose">Mongoose</span>
+                <span class="text-white lead px-2 py-1 my-xs-3 my-sm-1 m-1 h4 bg-jwt fw-bolder">JWT</span>
+                <span class="text-white lead px-2 py-1 my-xs-3 my-sm-1 m-1 h4 bg-json fw-bolder">JSON</span>
+              </div>
               <hr class="my-4" />
               <div class="d-flex flex-column bg-vlow">
                 <p class="h4 fw-light pt-3 px-3">
@@ -178,12 +178,13 @@
           <div class="carousel-inner">            
             <div class="carousel-item active">
               <div class="d-flex flex-row justify-content-center">
-                <h1 class="text-white" style="font-family: 'oswald';">Control App</h1>
-                <!-- <img src="./img/lighting2.png" alt="" class="image-fluid"> -->
+                <h1 class="text-white control-app-heading" style="font-family: 'oswald';">Control App</h1>
               </div>
             </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="..." alt="Third slide">
+            <div class="carousel-item">
+              <div class="d-flex flex-row justify-content-center">
+                <h1 class="text-white control-app-heading" style="font-family: 'oswald';">Control Marketing</h1>
+              </div>
             </div>
         </div>
         <a class="carousel-control-prev text-decoration-none px-5" href="#projectsCarousel" role="button" data-slide="prev">
@@ -201,7 +202,6 @@
       <div class="container">
         <h1 class="text-white text-center">Updates</h1>
         <div class="updateContainer d-flex flex-column py-3">
-
           <div class="update py-3 d-flex flex-lg-row flex-column shadow-lg rounded mx-auto my-3 bg-vlow">
             <div class="updateDate d-flex flex-column align-items-center justify-content-center rounded bg-blueaccent shadow-sm m-2 ">
               <h4 class="fw-lighter text-white px-2">February</h4>
@@ -209,7 +209,7 @@
             </div>
             <div class="updateContent bg-vlow rounded d-flex flex-column align-self-start justify-content-start ">
               <h3 class="text-white px-3 py-sm-3 py-md-2 py-lg-1 ">Bootstrap<span class="bg-warning text-white h5 fw-light rounded px-2 mx-2">Skill</span></h3>
-              <hr class="hr-dark w-75 mx-3">
+              <hr class="hr-lightblue w-75 mx-3">
               <p class="text-white px-3 lead">I began improving bootstrap knowledge so that I could build static sites more efficiently and consistently.</p>
             </div>
             
@@ -221,7 +221,7 @@
             </div>
             <div class="updateContent bg-vlow rounded d-flex flex-column align-self-start justify-content-start ">
               <h3 class="text-white px-3 py-sm-3 py-md-2 py-lg-1 ">Control app - Users system <span class="bg-success text-white h5 fw-light rounded px-2 mx-2">Project</span></h3>
-              <hr class="hr-dark w-75 mx-3">
+              <hr class="hr-lightblue w-75 mx-3">
               <p class="text-white px-3 lead">Once the basic functionality was implemented into the application I created new endpoints to handle user data and authentication. The application gained its first real user in January.</p>
             </div>
             
@@ -235,7 +235,7 @@
             </div>
             <div class="updateContent bg-vlow rounded d-flex flex-column align-self-start justify-content-start ">
               <h3 class="text-white px-3 py-sm-3 py-md-2 py-lg-1">Control app - Marketing page <span class="bg-success text-white h5 fw-light rounded px-2 mx-2">Project</span></h3>
-              <hr class="hr-dark w-75 mx-3">
+              <hr class="hr-lightblue w-75 mx-3">
               <p class="text-white px-3 lead">A frontend project to add to my collection to promote the Control app. </p>
               <a href="https://controlhe.netlify.app/" class="text-info px-3 lead"><p class="fw-bolder h5">View the site<i class="bi-link px-1"></i></p></a>
             </div>
@@ -261,7 +261,7 @@
             </div>
             <div class="updateContent bg-vlow rounded d-flex flex-column align-self-start justify-content-start ">
               <h3 class="text-white px-3 py-sm-3 py-md-2 py-lg-1">Control app - Development begins <span class="bg-success text-white h5 fw-lighter rounded px-2 mx-2">Project</span></h3>
-              <hr class="hr-dark w-75 mx-3">
+              <hr class="hr-lightblue w-75 mx-3">
               <p class="text-white px-3 lead">After discovering the qualities of Hubitat Elevation networks, I finally began writing a web application to host locally which would control devices connected to the hub.</p>
             </div>
           </div>
@@ -299,7 +299,7 @@
             </div>
             <div class="updateContent bg-vlow rounded d-flex flex-column align-self-start justify-content-start ">
               <h3 class="text-white px-3 py-sm-3 py-md-2 py-lg-1">Started Web Development <span class="bg-warning text-white h5 fw-light rounded px-2 mx-2">Skills</span></h3>
-              <hr class="hr-dark w-75 mx-3"> 
+              <hr class="hr-lightblue w-75 mx-3"> 
               <p class="text-white px-3 lead">I pursued the journey of learning Web Development, beginning with HTML/CSS and progressing with JavaScript.</p>
             </div>
           </div>
@@ -311,7 +311,7 @@
             </div>
             <div class="updateContent bg-vlow rounded d-flex flex-column align-items-start justify-content-start ">
               <h3 class="text-white px-3 py-sm-3 py-md-2 py-lg-1">College Sep 2018 - August 2020<span class="bg-info text-white h5 fw-light rounded px-2 mx-2">Qualification</span></h3>
-              <!-- <hr class="hr-dark w-75 mx-3">  -->
+              <!-- <hr class="hr-lightblue w-75 mx-3">  -->
               <p class="text-white px-3 lead"><b>ICT:</b> Distinction | <b>Business Studies:</b> B | <b>Mathematics:</b> C</p>
             </div>
           </div>
@@ -324,7 +324,7 @@
         <h1 class="text-center text-white py-5">Roadmap</h1>
       </div>
     </section>
-    <section class="py-5 bg-dark" id='contact'>
+    <section class="py-5 bg-blueaccent" id='contact'>
       <div class="container ">
         <h1 class="text-light text-center">Contact</h1>
         <div class="list-group w-50 mx-auto py-3">
