Restructured landing section

--- a/index.html
+++ b/index.html
@@ -47,50 +47,60 @@
       </div>
     </nav>
     
-    <section class="p-2 h-auto bg-dark">
-      <div class="container py-2">
-        <div class="d-block d-sm-flex flex-lg-row flex-sm-column align-items-center-md align-items-start py-2">
-          <h1 class="landing-title text-white w-100 pt-3 pb-1">
-           <span class="bg-blueaccent px-lg-3">Jake Whatling's</span> <p>corner of the internet</p>
-          </h1>
-          <div class="bg-blueaccent w-auto rounded my-2 py-2 shadow-lg px-sm-5 px-lg-0">
-            <h2 class="text-white px-5 px-2 py-1 landing-title text-center">
-              The
-              <span class="text-white h1">Hub</span>
-              for:
-            </h2>
-            <ul class="list-unstyled">
-              <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-center align-items-center">
-                <h4>Showcasing</h4>
-                <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Projects</h4>
-              </li>
-              <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-center align-items-center">
-                <h4>Tracking my</h4>
-                <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Skills</h4>
-              </li>
-              <li
-                class="text-white px-lg-5 px-3 h5 d-flex justify-content-center align-items-center"
-              >
-                <h4>Publishing</h4>
-                <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Updates</h4>
-              </li>
+  
+    <section class="pt-5 pb-5 position-relative" id='about'>
+          <div class="d-flex flex-row justify-content-center bg-image parallax" style="background-image: url('./img/forest.png');">
+               <div class=" d-flex flex-column justify-content-center align-items-start w-75 my-5 mx-auto">
+                 <div class=" d-flex flex-lg-row flex-column justify-content-between my-5 mx-auto">
+                   <h1 class="landing-title text-white w-100 py-5">
+                     <span class="bg-blueaccent px-lg-3">Jake Whatling's</span> <p>corner of the internet</p>
+                    </h1>
+                    <div class="bg-blueaccent w-auto rounded mx-5 my-3 py-2 shadow-lg px-sm-5 px-lg-0">
+                      <h2 class="text-white px-5 px-2 py-1 landing-title text-center">
+                        The
+                        <span class="text-white h1">Hub</span>
+                        for:
+                      </h2>
+                      <ul class="list-unstyled">
+                        <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-start align-items-start">
+                          <h4>Showcasing</h4>
+                          <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Projects</h4>
+                        </li>
+                        <li class="text-white px-lg-5 px-3 h5 d-flex justify-content-start align-items-start">
+                          <h4>Tracking my</h4>
+                          <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Skills</h4>
+                        </li>
+                        <li
+                        class="text-white px-lg-5 px-3 h5 d-flex justify-content-start align-items-start"
+                        >
+                        <h4>Publishing</h4>
+                        <h4 class="bg-white text-blueaccent px-2 py-1 mx-2">Updates</h4>
+                      </li>
+                    </ul>
+                </div>
+                
+              </div>
+            </div>
+          </div>   
+    </section>
+    <section class="pb-5">
+      <h1 class="text-light text-center bg-dark">About me</h1>
+      <div class="container bg-vlow rounded my-5">
+        <div class="d-flex flex-column flex-lg-row justify-content-lg-start align-items-center text-align-center my-5">
+          <img src="./img/profile.png" alt="" class="person-image rounded-circle w-25 my-3 mx-5">
+          <div class="bg-vlow my-3">
+            <p class="aboutme-text text-white px-3 py-4 mx-2 text-justify h5" style="text-shadow: 2px 2px 2px #424242">I'm Jake Whatling. A self-taught full stack web developer with a preference of frontend development. I've committed many hours of my free time to strengthening my understanding and learning new skills.</p>
+            <p class="aboutme-text text-white px-3 py-2 mx-2 text-justify h5" style="text-shadow: 2px 2px 2px #424242">Interests outside of tech:</p>
+            <ul class="list-unstyled text-white mx-5 lead">
+              <li></li>Photography</li>
+              <li></li>Hiking</li>
+              <li></li>Japanese motoring (90's & 00's)</li>
             </ul>
           </div>
         </div>
       </div>
     </section>
-    <section class="pt-1 pb-3 position-relative" id='about'>
-          <div class="d-flex flex-row justify-content-center bg-image parallax" style="background-image: url('./img/forest.png');">
-              <div class="d-flex flex-column justify-content-center align-items-center w-75 mb-3">
-                <img src="./img/dummy.png" alt="" class="person-image rounded-circle w-25 mt-5">
-                <h2 class="text-white bg-low m-3 px-5 py-2" style="text-shadow: 1px 1px 1px #424242df">Jake Whatling</h2>
-                <div class="d-flex flex-column bg-low mx-5 mb-3 w-100">
-                  <p class="aboutme-text text-white px-5 py-3 text-justify h4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur reprehenderit impedit ipsam inventore natus ex laborum! Quidem suscipit distinctio unde commodi nihil in, facilis quo? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus deserunt iure aliquam eveniet nihil ipsa harum eos nam, blanditiis assumenda est ab neque quas earum at vero numquam laborum laudantium?</p>
-              </div>
-          </div>
-        </div>
-    </section>
-    <section class="bg-dark" id='technologies'>
+    <section class="bg-dark py-5 mt-5" id='technologies'>
       <h1 class="text-light text-center bg-dark pt-2">Stack</h1>
       <div class="container py-5 d-flex flex-column">
         <div class="frontend d-md-flex align-items-sm-start" id="frontend">
