Added grid for projects section

--- a/index.html
+++ b/index.html
@@ -194,29 +194,36 @@
         </div>
       </div>
     </section>
-    <section class="py-5 bg-dark" id='projects'>
-      <h1 class="text-white text-center">Projects</h1>
-        <div id="projectsCarousel" class="carousel slide py-5" data-ride="carousel">
-          <div class="carousel-inner">            
-            <div class="carousel-item active">
-              <div class="d-flex flex-row justify-content-center">
-                <h1 class="text-white control-app-heading" style="font-family: 'oswald';">Control App</h1>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="d-flex flex-row justify-content-center">
-                <h1 class="text-white control-app-heading" style="font-family: 'oswald';">Control Marketing</h1>
-              </div>
-            </div>
+    <section class="py-5 mx-xl-5 bg-dark" id='projects'>
+      <div class="project-container my-5 mx-2">
+        <div class="project-child project-item-a bg-vlow d-flex">
+          <div class="project-content d-flex flex-row justify-content-center align-items-center">
+            <h1 class="text-white p-5 rounded">Projects</h1>          
+          </div>
         </div>
-        <a class="carousel-control-prev text-decoration-none px-5" href="#projectsCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only"></span>
-        </a>
-        <a class="carousel-control-next text-decoration-none px-5" href="#projectsCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only"></span>
-        </a>
+        <div class="project-child project-item-b bg-vlow">
+          <div class="project-overlay position-relative"></div>
+          <div class="project-content d-flex flex-column justify-content-center align-items-center position-relative">
+            <h1 class="text-white px-5 rounded">Test</h1>
+            <p class="text-white lead px-5 py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos quia explicabo possimus nihil excepturi?</p>
+          </div>
+        </div>
+        <div class="project-child project-item-c bg-vlow">
+          <div class="project-overlay position-relative"></div>
+          <div class="project-content d-flex flex-column justify-content-center align-items-center position-relative">
+            <h1 class="text-white px-5 rounded">Test</h1>
+            <p class="text-white lead px-5 py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos quia explicabo possimus nihil excepturi?</p>
+          </div>
+        </div>
+        <div class="project-child project-item-d bg-vlow">
+          <div class="project-overlay position-relative"></div>
+          <div class="project-content d-flex flex-column justify-content-center align-items-center position-relative">
+            <h1 class="text-white px-5 rounded">Test</h1>
+            <p class="text-white lead px-5 py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos quia explicabo possimus nihil excepturi?</p>
+          </div>
+        </div>
+        
+
       </div>
     </div>
     </section>
