Styling changes to projects section

--- a/index.html
+++ b/index.html
@@ -229,6 +229,8 @@
           <div class="project-overlay position-relative"></div>
           <div class="project-content d-flex flex-column justify-content-center align-items-center position-relative">
             <h1 class="text-white px-5 rounded">In Progress</h1>
+            <p class="text-white lead px-5 py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos quia explicabo possimus nihil excepturi?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos quia explicabo possimus nihil excepturi?</p>
             <p class="text-white lead px-5 py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos quia explicabo possimus nihil excepturi?</p>
           </div>
         </div>
