Added roadmap section and svg

--- a/index.html
+++ b/index.html
@@ -360,12 +360,20 @@
       </div>
     </section>
     <section class="py-5" id='roadmap'>
-      <div class="container">
-        <h1 class="text-center text-white py-5">Roadmap</h1>
+      <div class="container py-5">
+        <h1 class="text-center text-white pb-5">Roadmap</h1>
+        <div class="d-flex flex-row align-items-center mx-5">
+          <img src="./img/mindmap.svg" class="mx-5 w-50" alt="">
+          <ul class="mx-5 list-unstyled py-3" style="background-color: #2f2e41">
+            <li class="text-white lead px-3 py-2 d-flex flex-row justify-content-start "><span class="material-icons px-2 mt-1">code</span>Continue ReactJS & learn NextJS</li>
+            <li class="text-white lead px-3 py-2 d-flex flex-row justify-content-start "><span class="material-icons px-2">school</span>Study Data Structures</li>
+            <li class="text-white lead px-3 py-2 d-flex flex-row justify-content-start "><span class="material-icons px-2">palette</span>Improve Graphic Design skills</li>
+          </ul>
+        </div>
       </div>
     </section>
     <section class="py-5 bg-blueaccent" id='contact'>
-      <div class="container ">
+      <div class="container py-5">
         <h1 class="text-light text-center">Contact</h1>
         <div class="list-group w-50 mx-auto py-3">
           <div class="list-group-item bg-vlow text-white"><span class="fw-bold px-lg-4 px-1 h5 user-select-none">Telephone:</span><p class="lead d-inline">07948190365</p></div>
