--- a/index.html
+++ b/index.html
@@ -362,12 +362,12 @@
     <section class="py-5" id='roadmap'>
       <div class="container py-5">
         <h1 class="text-center text-white pb-5">Roadmap</h1>
-        <div class="d-flex flex-row align-items-center mx-5">
-          <img src="./img/mindmap.svg" class="mx-5 w-50" alt="">
-          <ul class="mx-5 list-unstyled py-3" style="background-color: #2f2e41">
-            <li class="text-white lead px-3 py-2 d-flex flex-row justify-content-start "><span class="material-icons px-2 mt-1">code</span>Continue ReactJS & learn NextJS</li>
-            <li class="text-white lead px-3 py-2 d-flex flex-row justify-content-start "><span class="material-icons px-2">school</span>Study Data Structures</li>
-            <li class="text-white lead px-3 py-2 d-flex flex-row justify-content-start "><span class="material-icons px-2">palette</span>Improve Graphic Design skills</li>
+        <div class="d-md-flex flex-row align-items-center mx-5">
+          <img src="./img/mindmap.svg" class="mx-lg-5 w-50" alt="">
+          <ul class="mx-lg-5 list-unstyled py-3" style="background-color: #2f2e41">
+            <li class="text-white lead px-3 py-2 d-flex flex-row justify-content-start align-items-center"><span class="material-icons px-2 mt-1">code</span>Continue ReactJS & learn NextJS</li>
+            <li class="text-white lead px-3 py-2 d-flex flex-row justify-content-start align-items-center"><span class="material-icons px-2">school</span>Study Data Structures</li>
+            <li class="text-white lead px-3 py-2 d-flex flex-row justify-content-start align-items-center"><span class="material-icons px-2">palette</span>Improve Graphic Design skills</li>
           </ul>
         </div>
       </div>
