Changed about content

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div class="d-flex flex-column flex-lg-row justify-content-lg-start align-items-center text-align-center my-5">
           <img src="./img/profile.png" alt="" class="person-image rounded-circle w-25 my-3 mx-5">
           <div class="bg-vlow my-3">
-            <p class="aboutme-text text-white px-3 py-4 mx-2 text-justify h5" style="text-shadow: 2px 2px 2px #424242">I'm Jake Whatling. A self-taught full stack web developer with a preference of frontend development. I've committed many hours of my free time to strengthening my understanding and learning new skills.</p>
+            <p class="aboutme-text text-white px-3 py-4 mx-2 text-justify h5" style="text-shadow: 2px 2px 2px #424242">A self-taught full stack web developer with a preference of frontend development. Based in Warrington. Looking for career opportunities in Software.</p>
             <p class="aboutme-text text-white px-3 py-2 mx-2 text-justify h5" style="text-shadow: 2px 2px 2px #424242">Interests outside of tech:</p>
             <ul class="list-unstyled text-white mx-4 lead">
               <li class="d-flex flex-row justify-content-start align-items-center"><i class="bi-camera-fill m-1 px-1 position-relative" style="top: -4%;"></i>Photography</li>
@@ -120,7 +120,7 @@
               <div class="d-flex flex-column bg-vlow">
                 <p class="h4 fw-light text-white pt-3 px-2 lh-base">
                   Designing and styling <span class="bg-blueaccent px-2 fw-bolder">pleasing</span> UI features for web applications relies on strong <span class="bg-blueaccent px-2 fw-bolder">creativity</span> skills and precise attention to detail. My frontend skills include:
-                  <ul class="frontend-list-section text-white position-relative py-3">
+                  <ul class="frontend-list-section text-white position-relative pt-3">
                     <li class="px-3 py-1 h5 fw-lighter">Blueprinting modern UI's</li>
                     <li class="px-3 py-1 h5 fw-lighter">Designing attractive colour schemes</li>
                     <li class="px-3 py-1 h5 fw-lighter">Building responsive UI elements</li>
@@ -231,7 +231,6 @@
             <h1 class="text-white px-5 rounded">In Progress</h1>
             <p class="text-white lead px-5 py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos quia explicabo possimus nihil excepturi?
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos quia explicabo possimus nihil excepturi?</p>
-            <p class="text-white lead px-5 py-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente quos quia explicabo possimus nihil excepturi?</p>
           </div>
         </div>
 
@@ -248,7 +247,7 @@
               <h5 class="fw-lighter h2 text-white px-2">2022</h5>
             </div>
             <div class="updateContent bg-vlow rounded d-flex flex-column align-self-start justify-content-start ">
-              <h3 class="text-white px-lg-3 py-sm-3 py-md-2 py-lg-1 ">Bootstrap<span class="bg-warning text-white h5 fw-light rounded px-2 mx-2">Skill</span></h3>
+              <h3 class="text-white px-lg-3 py-sm-3 py-md-2 py-lg-1 ">Bootstrap<span class="bg-warning text-white h5 fw-light rounded px-2 mx-2">Skills</span></h3>
               <hr class="w-75 mx-3">
               <p class="text-white px-lg-3 lead">I began improving bootstrap knowledge so that I could build static sites more efficiently and consistently.</p>
             </div>
