Added location to about section

--- a/index.html
+++ b/index.html
@@ -88,14 +88,15 @@
     <section class="pb-5">
       <h1 class="text-light text-center bg-dark">About me</h1>
       <div class="container bg-vlow rounded my-5">
-        <div class="d-flex flex-column flex-lg-row justify-content-lg-start align-items-center text-align-center my-5">
+        <div class="d-flex flex-column flex-lg-row justify-content-start my-5">
           <img src="./img/profile.png" alt="" class="person-image rounded-circle w-25 my-3 mx-5">
-          <div class="bg-vlow my-3">
-            <p class="aboutme-text text-white px-3 py-4 mx-2 text-justify h5" style="text-shadow: 2px 2px 2px #424242">A self-taught full stack web developer with a preference of frontend development. Based in Warrington. Looking for career opportunities in Software.</p>
+          <div class="bg-vlow my-3 d-flex flex-column justify-content-center align-items-start">
+            <p class="aboutme-text text-white px-3 py-4 mx-2 text-justify h5" style="text-shadow: 2px 2px 2px #424242">A self-taught full stack web developer with a preference of frontend development. Looking for career opportunities in Software.</p>
+            <p class="aboutme-text px-2 mx-2 text-justify h6 fw-light d-flex flex-row justify-content-center align-items-center position-relative" style="text-shadow: 2px 2px 2px #424242; color: rgb(194, 188, 188); top: -5%;"><span class="material-icons px-1" >place</span> Warrington, United Kingdom</p>
             <p class="aboutme-text text-white px-3 py-2 mx-2 text-justify h5" style="text-shadow: 2px 2px 2px #424242">Interests outside of tech:</p>
             <ul class="list-unstyled text-white mx-4 lead">
               <li class="d-flex flex-row justify-content-start align-items-center"><i class="bi-camera-fill m-1 px-1 position-relative" style="top: -4%;"></i>Photography</li>
-              <li class="d-flex flex-row justify-content-start align-items-center"><i class="material-icons m-1 px-1">hiking</i>Hiking</li>
+              <li class="d-flex flex-row justify-content-start align-items-start"><i class="material-icons m-1 px-1">hiking</i>Hiking</li>
               <li class="d-flex flex-row justify-content-start align-items-center"><i class="material-icons m-1 px-1">drive_eta</i>Japanese motoring (90's & 00's)</li>
             </ul>
           </div>
