removed phone number

--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
       <div class="container py-5">
         <h1 class="text-light text-center">Contact</h1>
         <div class="list-group w-50 mx-auto py-3">
-          <div class="list-group-item bg-vlow text-white"><span class="fw-bold px-lg-4 px-1 h5 user-select-none">Telephone:</span><p class="lead d-inline">07948190365</p></div>
+          <div class="list-group-item bg-vlow text-white"><span class="fw-bold px-lg-4 px-1 h5 user-select-none">Telephone:</span><p class="lead d-inline"></p></div>
           <div class="list-group-item bg-vlow text-white"><span class="fw-bold px-lg-4 px-1 h5 user-select-none">Email Address:</span><p class="lead d-inline">jakewhatling2002@gmail.com</p></div>
         </div>
         <div class="d-flex flex-row justify-content-center align-items-center w-25 mx-auto">
